assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    margin: 0;
    background: #222;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
}

/*Navigation styles*/
header {
    background-color: rgba(85, 214, 170, .85);
    text-align: center;
    position: fixed;
    z-index: 9999;
    width: 100%;
}

nav {
    position: absolute;
    text-align: left; 
    top: 100%;
    left: 0; 
    background-color:rgba(85, 214, 170, .85);
    width: 100%;
    display: none;
}

nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
    background-color: rgba(85, 214, 170, .85);
}

nav li {
    margin-bottom: 1em; 
    margin-left: 1em;
}

nav a {
    color: white;
    text-decoration: none; 
    font-size: 1.2rem;
    text-transform: uppercase;
}

nav a:hover {
    color: #000;
}

.nav-toggle:checked~nav{
    display: block;
}

.nav-toggle {
    display: none;
}

.nav-toggle-label {
    position: absolute; 
    top: 0;
    left: 0;
    margin-right: 1em;
    border: 1px solid red;
    height: 100%;
    display: flex;
    align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background: whitesmoke;
    height: 2px;
    width: 2em;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}

.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}
main {
    flex: 1 0 auto;
    display: flex;
    /*background-blend-mode: multiply;
    background-color: rgba(85, 214, 170, .85);*/
    flex-direction: column;
    position: relative;
}

#budapest {
    height: 95vh;
    width: 100%;
    background: url("./images/pexels-attila-pergel-11096565.jpg") no-repeat center center/cover;
    background-color: rgba(85, 214, 170, .85);
    position: relative;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    filter: blur(0);
}

#text-overlay {
    position: relative;
    top: 50%; /* Adjust this value to vertically center the text*/ 
    left: 50%; /* Adjust this value to horizontally center the text */
    transform: translate(-50%, -50%); /* Center the text perfectly */
    color: white;
    text-align: center;
    font-size: 24px;
    font-weight: bold;
    text-shadow: 2px 2px 4px rgba(85, 214, 170, .85); 
    background-color: rgba(85, 214, 170, 0.85);
    padding: 20px;
}

footer {
    background-color: rgba(85, 214, 170, 0.85); 
}

#social-media {
    text-align: center; 
    padding: 10px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-media i {
    font-size: 160%;
    color: white;
}

@media screen and (min-width: 992px) {
    .nav-toggle-label {
        display: none;
    }

    header {
        padding: 0 1rem;
        position: fixed;
        z-index: 99;
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: baseline;
        display: flex;
        align-items: last baseline;
    }

    nav {
        all: unset;
        grid-column: 3 / 4;
        display: flex;
        align-items: flex-end;
        margin-right: 10px;

    }

    nav a {
        opacity: 1;
    }
    nav li a:hover{
        text-decoration: underline;
    }

    nav ul {
        display: flex;
        justify-content: space-evenly;
        align-items: last baseline;
        }
}

